# TypeAssist

./: .gitignore  README.md  gradle.properties  settings.gradle
.acside/editor/: openedFiles.json  openedFiles.json.bak
.github/workflows/: build.yml  pre-release.yml  preview.yml  release.yml
SysBlock/: WelcomeScreen.kt  XiaomiUtils.kt
app/: build.gradle  proguard-rules.pro
app/src/androidTest/kotlin/com/typeassist/app/: TypeAssistInstrumentedTest.kt
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build-info.cpp  licenses.cpp  native-lib.cpp
app/src/main/kotlin/com/typeassist/app/: AppConfig.kt  MainActivity.kt  MyAccessibilityService.kt  Screens.kt
app/src/main/kotlin/com/typeassist/app/api/: AiProvider.kt  CloudflareApiClient.kt  CustomApiClient.kt  GeminiApiClient.kt  LocalLlmClient.kt  ResponseCleaner.kt
app/src/main/kotlin/com/typeassist/app/data/: AppConfig.kt  CommandLibrary.kt  HistoryManager.kt
app/src/main/kotlin/com/typeassist/app/data/model/: GitHubRelease.kt
app/src/main/kotlin/com/typeassist/app/data/network/: GitHubApiService.kt
app/src/main/kotlin/com/typeassist/app/data/repository/: UpdateRepository.kt
app/src/main/kotlin/com/typeassist/app/service/: MyAccessibilityService.kt  OverlayManager.kt
app/src/main/kotlin/com/typeassist/app/ui/: Theme.kt  TypeAssistApp.kt
app/src/main/kotlin/com/typeassist/app/ui/components/: TypingAnimationPreview.kt  UpdateDialog.kt
app/src/main/kotlin/com/typeassist/app/ui/screens/: CommandLibraryScreen.kt  CommandsScreen.kt  DidYouKnowScreen.kt  GuideScreen.kt  HistoryScreen.kt  HomeScreen.kt  JsonScreen.kt  PermissionsScreen.kt  SettingsScreen.kt  SnippetsScreen.kt  TestScreen.kt  WelcomeScreen.kt
app/src/main/kotlin/com/typeassist/app/utils/: BackupManager.kt  CpuChecker.kt  UpdateManager.kt  UtilityBelt.kt  XiaomiUtils.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/kotlin/com/typeassist/app/utils/: UtilityBeltTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 9.txt
